Update the WellKnown endpoints to use the AuthorizationServers URL.